# todo-app

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DEV-CONTAINER-NOTES.md  Dockerfile.backend  Dockerfile.caddy  INSTRUCTIONS.md  Makefile  NOTES.md  README.md  SPECS.md  TASK-EXECUTION-INSTRUCTIONS.md  TECH-DEBT-RECOMMENDATIONS.md  TODO.md  VALIDATION.md  docker-compose.yml  launch.py  manage.py  plan.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh
conventions/: code-style.md  file-organization.md
deploy/: .env.docker.example  .env.example  Caddyfile  auto-update.service  auto-update.sh  auto-update.timer  configure-caddy.sh  debug500.py  litestream.service  litestream.yml  nexus.service  nginx.nexus.conf  nginx.todoapp.conf  outlook-debug.sh  outlook-whoami.sh  run-manage.sh  setup.sh  todoapp.service  update.sh
docs/: data-integration.md  exploratory-testing.md
e2e/: conftest.py  test_drag_drop.py  test_export.py  test_interactions.py  test_keyboard.py  test_list_crud.py  test_markdown.py  test_nav_from_task_page.py  test_navigation.py  test_network_links.py  test_pinning.py  test_recurrence.py  test_search.py  test_section_crud.py  test_tags.py  test_task_completion.py  test_task_crud.py  test_timesheet.py  test_upcoming.py
frontend/: package-lock.json  package.json  vite.config.ts
network/: admin.py
nexus/: asgi.py  settings.py  urls.py  wsgi.py
notebook/: mentions.py  models.py  tests.py
openspec/: config.yaml
static/: manifest.json  service-worker.js
(+820 files in other folders)
